--- a/README
+++ b/README
@@ -2,6 +2,8 @@ nnlib - Neural Network Library
 
 Just a simple library for Neural Networks based on the tutorial at http://www.ai-junkie.com/ann/evolved/nnt1.html
 
+It is not finished yet and currently just has a few lines of code..It is not finished yet and currently just has a few lines of code...
+
 This library has no dependencies, and can be compiled normally with a C++-Compiler.
 
 Support for CMake coming soon.
